SkywaPhoneNoInputField added as widget

--- a/example/web/index.html
+++ b/example/web/index.html
@@ -54,5 +54,7 @@
       });
     });
   </script>
+  <script src="assets/packages/libphonenumber_plugin/js/libphonenumber.js"></script>
+  <script src="assets/packages/libphonenumber_plugin/js/stringbuffer.js"></script>
 </body>
 </html>
